--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,19 @@
 @import url('http://fonts.googleapis.com/css?family=Zen+Tokyo+Zoo&display=swap');
 
 
+
+/* General Styles */
+body {
+    padding-top:50px;
+    background-color: white;
+}
+
 /* Logo Styles */
 #logo {
     background-color: black;
-    height: 70px;
+    height: 130px;
+    padding-top:50px;
+    color:greenyellow;
 }
 h1 {
     font-display: uppercase;
@@ -15,35 +24,42 @@ h1 {
 #contact-logo {
     position:absolute;
     right:10px;
-    top:10px;
+    
 }
 
 /* Navbar Styles */
 #navbar {
-    background-color: pink;
+    background-color: greenyellow;
+    height:50px;
 }
 
 .nav-link {
     font-size:x-large;
 }
 
+#navbar #contact-logo {
+    padding:5px;
+}
+
 
 /* Background Image Styles */
 .centered-image {
   position: absolute;
-  top: 55%;
+  top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color:black;
 }
 
 #show_bg_2 {
     background-image:
-    linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)),
+    linear-gradient(to bottom, rgba(24, 24, 26, 0.52), rgba(173, 255, 22, 0.849)),
     url('../images/pexels-anastasia-shuraeva-4944435.jpg');
-    width: 100%;
+    max-width: 100%;
     height: 700px;
     background-size: cover;
     background-position: center;   
+    
 }
 
 .btn{
@@ -52,15 +68,27 @@ h1 {
 
 /* Main Content Styles */
 
-.card {
+#gym-image {
     border-radius: 0;
+    margin: 5px 10px;
+    filter: brightness(30%);
+    
+}
+
+.table {
+    
+    
+    
+}
+
+table tr td, table tr th{
+  background-color: rgba(0, 0, 0, 0.3) !important;
 }
 
 
-#intro {
-   height:400px;
-   margin: 0 5px;
-   background-color: pink;
-   width:100%;
-   display: flex;
+
+/* footer styles */ 
+
+footer {
+    background-color: greenyellow;
 }
