--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,13 +48,13 @@ nav li {
 }
 
 .navbar .navbar-nav {
-    
+
     border-bottom: 2px solid black;
 }
 
 .nav-link {
     font-family: play;
-    
+
 }
 
 
@@ -97,7 +97,7 @@ nav li {
 #servicesgym {
     background-image: url(../images/samuel-girven-fqMu99l8sqo-unsplash.jpg);
     width: 100%;
-    height: 400px;
+    height: 395px;
     background-size: cover;
     background-position: center;
     margin: 5px;
@@ -172,12 +172,74 @@ table tr th {
 
 }
 
-h2 {
+#tabletime {
     font-family: 'Zen Tokyo Zoo', cursive;
     color: #bcd145;
     padding-top: 10px;
 
 }
+
+/* Service styles */
+
+#service {
+    padding-top: 50px;
+    font-family: 'Zen Tokyo Zoo', cursive;
+    color: #bcd145;
+}
+
+#srvc-cards {
+    background-color: black;
+    margin: 5px;
+
+
+}
+
+#srvc-img {
+    height: 25vw;
+    object-fit: cover;
+
+
+}
+
+#boxing-button {
+    background-color: #bcd145;
+    border: none;
+    font-family: play;
+    color: black;
+    font-size: 20px;
+}
+
+.srvc-buttons {
+    margin-bottom: 30px;
+    width:47.5vw;
+    position:relative;
+    left:2%
+}
+
+#sauna-button {
+    background-color: #bcd145;
+    border: none;
+    font-family: play;
+    color: black;
+    font-size: 20px;
+}
+
+#pool-button {
+    background-color: #bcd145;
+    border: none;
+    font-family: play;
+    color: black;
+    font-size: 20px;
+}
+
+#trainer-button {
+    background-color: #bcd145;
+    border: none;
+    font-family: play;
+    color: black;
+    font-size: 20px;
+}
+
 
 
 /* footer styles */
