added responsive gallery of images that zooms in on hover

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -267,6 +267,50 @@ ul h2 {
     color:#bcd145
 }
 
+/* Gallery styles */
+
+
+#gallery {
+    padding-top: 50px;
+    font-family: 'Zen Tokyo Zoo', cursive;
+    color: #bcd145;
+    text-decoration: underline 3px;
+
+}
+
+* {
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    transition:0.2s linear;
+}
+ .container-box {
+    padding:2rem 5%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap:wrap;
+ }
+  .container-box .image-container {
+    columns:15rem 3;
+    gap:1.4rem;
+  }
+
+  .container-box .image-container img {
+    width: 100%;
+    margin-bottom:1rem;
+    border-radius:0.7;
+  }
+
+  .container-box .image-container img:hover {
+    transform:scale(1.01);
+  }
+
+
+
+
+
+
 /* footer styles */
 
 footer {
