--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Macondo&family=Oswald:wght@200..700&family=Play:wght@400;700&family=Zen+Tokyo+Zoo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Zen+Tokyo+Zoo&display=swap');
 
 html,
 body {
@@ -107,7 +107,7 @@ nav li {
 /* Main Content Styles */
 
 #servicesgym {
-    background-image: url(../images/samuel-girven-fqMu99l8sqo-unsplash.jpg);
+    background-image: url(../images/Converted/index.html1-services-image.webp);
     width: 100%;
     height: 395px;
     background-size: cover;
@@ -321,7 +321,7 @@ div ol {
 }
 
 #signupform {
-    background-image: url(../images/pexels-ketut-subiyanto-4853248.jpg);
+    background-image: url(../images/Converted/booking-form-background1.webp);
     background-size: cover;
 }
 
