--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -95,7 +95,7 @@ nav li {
 }
 
 #contact-btn {
-    position: absolute;
+    position: relative;
     top: 50%;
     font-family: play;
     color: #bcd145;
